<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="search_city_weather">Search City Weather</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="no_internet">You Seem To Have Lost Connection. Swipe Refresh To Retry</string>

</resources>